# TRPG

./: CMakeLists.txt  README.md  main.cpp
action/: action.cpp  action.h  actions.cpp  actions.h
entity/: creature.cpp  creature.h  entities.h  entity.cpp  entity.h  hostile_creature.cpp  hostile_creature.h  living_entity.cpp  living_entity.h  player.cpp  player.h
game/: game_state.cpp  game_state.h  registries.h  registry.cpp  registry.h
item/: inventory.cpp  inventory.h  item.cpp  item.h  items.h  loot_table.cpp  loot_table.h  loot_tables.h
location/: location.cpp  location.h  locations.h
utility/: format.h  string.h
